[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Cartoon_bubble_speech/Kapoow/k_sound1.wav" type="AudioStream" id=1]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/cartoonBubble1.png" type="Texture" id=2]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/cartoonBubble2.png" type="Texture" id=3]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/cartoonBubble3.png" type="Texture" id=4]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/cartoonBubble4.png" type="Texture" id=5]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/pngfind.com-batman-comic-png-386702.png" type="Texture" id=6]
[ext_resource path="res://UI/Cartoon_bubble_speech/cartoon_asset_math_fight/pngfind.com-comic-bang-png-4081403.png" type="Texture" id=7]
[ext_resource path="res://UI/Cartoon_bubble_speech/Cartoon_speech_bubble.gd" type="Script" id=8]
[ext_resource path="res://UI/Cartoon_bubble_speech/Kapoow/K_sound2.wav" type="AudioStream" id=9]
[ext_resource path="res://UI/Cartoon_bubble_speech/Kapoow/K_sound3.wav" type="AudioStream" id=10]

[node name="Cartoon_speech_bubble" type="Node2D"]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Bubble_moderator" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 6 )

[node name="Sprite6" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Sprite7" type="Sprite" parent="Bubble_moderator"]
visible = false
modulate = Color( 1, 1, 1, 0.388235 )
texture = ExtResource( 2 )

[node name="K_a" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="K_b" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="K_c" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
